# KORIK_SCANNER

./: Cargo.toml  README.md  logs  main.rs
method_parser/: method_parser.rs  mod.rs
payload_builder/: mod.rs  payload_builder.rs
portscanner/: mod.rs  tcpscan.rs  udpscan.rs
sender/: crawler.rs  mod.rs  suraw.rs
sqli/: mod.rs  sqli.rs
xss/: mod.rs  xss.rs
