[package]
name = "v1"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
ipnetwork = "0.20.0"
trust-dns-resolver = "0.23.2"
trust-dns-client = "0.23.2"
reqwest = { version = "0.11.20", features = ["blocking", "socks","json","multipart"] }
regex = "1.9.4"
scraper = "0.17.1"
dns-lookup = "2.0.2"
fancy-regex = "0.11.0"
hyper = "0.14.27"
indicatif = "0.17.7"
log = "0.4.20"
ctrlc = "3.1.9"
webpki-roots = "0.26.1"
pem = "3.0.3"
webpki = "0.22.4"
rustls = "0.20"
urlencoding = "2.1.3"
async-trait = "0.1.77"
fantoccini = "0.19.3"
tcp-stream = "0.27.1"
actix-rt = "2.9.0"
actix-web = "4.5.1"
url = "2.5.0"
sqlx = {version = "0.6.3", features = ["postgres","runtime-tokio-rustls","chrono"]}
dotenv = "0.15.0"
sqlx-cli = "0.7.4"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = {version = "0.4.35", features = ["serde"]}
serde = {version = "1.0.197",features=["derive"]}
serde_json = {version = "1.0.114",features = ["raw_value"]}
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
once_cell = "1.19.0"
env_logger = "0.11.3"
lazy_static = "1.4.0"
tokio-rustls = "0.26.0"
rayon = "1.10.0"
hashbrown = "0.14.5"
time = "0.3.36"
native-tls = "0.2.12"
openssl = "0.10.64"
x509-parser = "0.16.0"
html-escape = "0.2.13"
percent-encoding = "2.3.1"
rustls-pki-types = "1.8.0"

